finish the implementation of support page

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,38 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.heading, .rte h2 {
+    font-family: sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #000;
+}
+
+.rte h2{
+  margin: 1.55em 0 .6em;
+}
+
+.h1, .rte h1 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 1.45;
+}
+.h2, .rte h2 {
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 1.55;
+}
+
+strong {
+    font-weight: 700;
+}
+
+address{
+    font-style: normal;
+    line-height: 1.6;
+    text-align: center;
+}
+
 p{
   line-height: 1.6;
   color:#333;
@@ -68,6 +100,11 @@ a:hover {
     margin-right: 18px;
     width: 32px;
     height: 32px;
+}
+
+.card .icon {
+    font-size: 34px;
+    margin-bottom: 50px;
 }
 
 .icon {
@@ -127,8 +164,36 @@ a:hover {
 .cart-nav{
   text-decoration: none !important;
 }
+
+.rte{
+    word-break: break-word;
+}
+
+.rte h2 {
+    margin: 1.55em 0 .6em;
+}
+
+.page__description {
+    margin: 10px 0 0;
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 24px;
+    margin: 32px 0;
+}
+
 @media screen and (min-width: 641px) {
     .footer-copyrightt:not(:only-child) {
         margin-top: 34px !important;
+    }
+    .h1, .rte h1 {
+        font-size: 28px;
+        line-height: 1.43;
+    }
+    .h2, .rte h2 {
+      font-size: 25px;
+      line-height: 1.5;
     }
 }
