--- a/app/globals.css
+++ b/app/globals.css
@@ -80,11 +80,12 @@ button{
     transition: .2s ease-in-out;
 }
 a {
-    color: #0073e6;
+    color: black;
     text-decoration: none;
 }
 footer a:hover {
     color: #f18a1d;
+    text-decoration: none;
 }
 a:hover {
     text-decoration: underline;
