--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffff;
+    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
@@ -23,222 +23,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.heading, .rte h2 {
-    font-family: sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: #000;
-}
-
-.rte h2{
-  margin: 1.55em 0 .6em;
-}
-
-.h1, .rte h1 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    line-height: 1.45;
-}
-.h2, .rte h2 {
-    margin-bottom: 20px;
-    font-size: 22px;
-    line-height: 1.55;
-}
-
-strong {
-    font-weight: 700;
-}
-
-address{
-    font-style: normal;
-    line-height: 1.6;
-    text-align: center;
-}
-
-p{
-  line-height: 1.6;
-  color:#333;
-  text-align: center;
-  margin-top: 0;
-}
-
-.payment-list__item{
-  margin: 4px !important;
-}
-
-button{
-  cursor: pointer;
-}
-
-.footer__link-item {
-    display: block;
-    padding: 5px 0;
-}
-.link {
-    transition: .2s ease-in-out;
-}
-a {
-    color: black;
-    text-decoration: none;
-}
-footer a:hover {
-    color: #f18a1d;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-
-.icon--bi-phone {
-    margin-right: 16px;
-    width: 34px;
-    height: 34px;
-}
-
-.icon--bi-email {
-    margin-right: 18px;
-    width: 32px;
-    height: 32px;
-}
-
-.card .icon {
-    font-size: 34px;
-    margin-bottom: 50px;
-}
-
-.icon {
-    display: inline-block;
-    height: 1em;
-    width: 1em;
-    fill: currentColor;
-    vertical-align: middle;
-    background: none;
-    pointer-events: none;
-    overflow: visible;
-}
-
-.mobile-menu {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top: 100%;
-    visibility: hidden;
-    max-height: 0;
-    z-index: 1;
-    opacity: 0;
-    transform: scale(.9);
-    transition: opacity .25s ease-in-out, transform .25s ease-in-out, visibility .25s ease-in-out, max-height 0s linear .25s;
-    will-change: transform;
-}
-
-.mobile-menu[aria-hidden=false] {
-    opacity: 1;
-    visibility: visible;
-    background-color: #ffffff;
-    max-height: 574px;
-    transform: scale(1);
-    transition: opacity .4s cubic-bezier(0, 1, .4, 1), transform .4s cubic-bezier(.18, 1.25, .4, 1), visibility .4s linear;
-}
-
-.mobile-menu__inner {
-    position: relative;
-    max-width: 100vw;
-    height: 100%;
-    overflow: hidden;
-}
-
-.mobile-menu__panel {
-    position: relative;
-    height: 100%;
-    background: var(--secondary-background);
-    overflow-y: auto;
-    overflow-x: hidden;
-    -ms-scroll-chaining: none;
-    overscroll-behavior: none;
-    -webkit-overflow-scrolling: touch;
-    transition: transform .5s cubic-bezier(.23, 1, .32, 1), visibility .5s cubic-bezier(.23, 1, .32, 1);
-}
-
-.cart-nav{
-  text-decoration: none !important;
-}
-
-.rte{
-    word-break: break-word;
-}
-
-.rte h2 {
-    margin: 1.55em 0 .6em;
-}
-
-.page__description {
-    margin: 10px 0 0;
-}
-
-.card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 24px;
-    margin: 32px 0;
-}
-
-.wrapper_left a:hover, .review{
-  text-decoration: none !important;
-}
-
-/* .tp-stars--4--half .tp-star:nth-of-type(-n + 4) .tp-star__canvas, .tp-stars--4--half .tp-star:nth-of-type(-n + 4) .tp-star__canvas--half {
-    fill: #00b67a !important;
-}
-.tp-stars--4 .tp-star:nth-of-type(-n + 4) .tp-star__canvas, .tp-stars--4 .tp-star:nth-of-type(-n + 4) .tp-star__canvas--half {
-    fill: #73cf11;
-}
-.tp-stars .tp-star__canvas, .tp-stars .tp-star__canvas--half {
-    fill: #dcdce6;
-}
-
-.tp-stars .tp-star__shape {
-    fill: #fff;
-} */
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.wrapper_left {
-    float: left;
-    width: 400px;
-}
-
-@media screen and (min-width: 1175px) {
-    .tp-widget-wrapper .wrapper-right {
-        width: calc(100% - 200px) !important;
-    }
-}
-
-@media screen and (min-width: 641px) {
-    .footer-copyrightt:not(:only-child) {
-        margin-top: 34px !important;
-    }
-    .h1, .rte h1 {
-        font-size: 28px;
-        line-height: 1.43;
-    }
-    .h2, .rte h2 {
-      font-size: 25px;
-      line-height: 1.5;
-    }
-}
-
-@media screen and (min-width: 520px) {
-    .tp-widget-wrapper .wrapper_left {
-        float: left;
-        width: 200px;
-    }
 }
